<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipCalculatorActivity">

    <TextView
        android:id="@+id/CheckAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif"
        android:text="@string/check_amount"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/checkAmountValue"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/_120_45"
        android:importantForAutofill="no"
        android:inputType="number|textAutoComplete|numberDecimal"
        android:textAlignment="viewStart"
        android:textColor="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/CheckAmountText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/partySizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="43dp"
        android:text="@string/party_size"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckAmountText" />

    <EditText
        android:id="@+id/partySizeValue"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/_4"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/partySizeText"
        app:layout_constraintTop_toBottomOf="@+id/checkAmountValue"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#273AA3"
        android:fontFamily="sans-serif"
        android:text="@string/compute_tip"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39999998" />


    <TextView
        android:id="@+id/tipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="sans-serif"
        android:text="@string/tip"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTipText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="39dp"
        android:fontFamily="sans-serif"
        android:text="@string/total"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tipText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Headertext"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/fifteenPercentTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="sans-serif"
        android:text="@string/_15"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tipText" />

    <TextView
        android:id="@+id/twentyPercentTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="sans-serif"
        android:text="@string/_20"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTipValue" />

    <TextView
        android:id="@+id/twentyfivePercentTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="sans-serif"
        android:text="@string/_25"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTipValue" />

    <TextView
        android:id="@+id/fifteenPercentTotalText"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="86dp"
        android:fontFamily="sans-serif"
        android:text="@string/_15Total"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/totalText"
        app:layout_constraintTop_toBottomOf="@+id/Headertext" />

    <TextView
        android:id="@+id/twentyPercentTotalText"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="78dp"
        android:fontFamily="sans-serif"
        android:text="@string/_20Total"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTotalValue"
        app:layout_constraintTop_toBottomOf="@+id/Headertext" />

    <TextView
        android:id="@+id/twentyfivePercentTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif"
        android:text="@string/_25Total"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTotalValue"
        app:layout_constraintTop_toBottomOf="@+id/Headertext" />

    <EditText
        android:id="@+id/fifteenPercentTipValue"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:textColor="#9C27B0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTipText"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/twentyPercentTipValue"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:textColor="#9C27B0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTipText"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:textColor="#9C27B0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/fifteenPercentTotalValue"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:textColor="#9C27B0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTotalText"
        app:layout_constraintTop_toBottomOf="@+id/Headertext"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/twentyPercentTotalValue"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:textColor="#9C27B0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTotalText"
        app:layout_constraintTop_toBottomOf="@+id/Headertext"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/twentyfivePercentTotalValue"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:textColor="#9C27B0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Headertext"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Headertext"
        android:layout_width="372dp"
        android:layout_height="35dp"
        android:text="@string/tip_and_totals_per_person"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>